--- a/inst/templates/_regional-summary.Rmd
+++ b/inst/templates/_regional-summary.Rmd
@@ -40,20 +40,20 @@ knitr::include_graphics(here::here(file.path(summary_path, "summary_plot.png")))
 `r paste0("### Reproduction numbers over time in the six regions expected to have the most new confirmed ",  case_def, "s")`
 
 ```{r, fig.height = 6, fig.width = 8, layout="l-body-outset", out.width = "95%"}
-knitr::include_graphics(here::here(file.path(summary_path, "high_cases_rt_plot.png")))
+knitr::include_graphics(here::here(file.path(summary_path, "high_infections_rt_plot.png")))
 ```
 
 <br>
-`r paste0("*Figure ", fig_start + 1, ": Time-varying estimate of the effective reproduction number (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in the regions expected to have the highest number of new confirmed ", case_def,  "s. Estimates from existing data are shown up to the ", latest_date, ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""), ". Confidence in the estimated values is indicated by translucency with increased translucency corresponding to reduced confidence. The horizontal dotted line indicates the target value of 1 for the effective reproduction no. required for control. The vertical dashed line indicates the date of report generation.*")`
+`r paste0("*Figure ", fig_start + 1, ": Time-varying estimate of the effective reproduction number (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in the regions expected to have the highest number of new confirmed ", case_def,  "s. Estimates from existing data are shown up to the ", latest_date, ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""), ". The horizontal dotted line indicates the target value of 1 for the effective reproduction no. required for control. The vertical dashed line indicates the date of report generation.*")`
 
 `r paste0("### Confirmed ",  case_def, "s and their estimated date of infection in the six regions expected to have the most new confirmed ", case_def, "s")`
 
 ```{r, fig.height = 6, fig.width = 8, layout="l-body-outset", out.width = "95%"}
-knitr::include_graphics(here::here(file.path(summary_path, "high_cases_plot.png")))
+knitr::include_graphics(here::here(file.path(summary_path, "high_infections_plot.png")))
 ```
 
 <br>
-`r paste0("*Figure ", fig_start + 2, ": Confirmed ", case_def,  "s by date of report (bars) and their estimated date of infection (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in the regions expected to have the highest number of new confirmed ", case_def, "s.  Estimates from existing data are shown up to the ", latest_date,  ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""), ". Confidence in the estimated values is indicated by translucency with increased translucency corresponding to reduced confidence. The vertical dashed line indicates the date of report generation.*")`
+`r paste0("*Figure ", fig_start + 2, ": Confirmed ", case_def,  "s by date of report (bars) and their estimated date of infection (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in the regions expected to have the highest number of new confirmed ", case_def, "s.  Estimates from existing data are shown up to the ", latest_date,  ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""), ". The vertical dashed line indicates the date of report generation.*")`
 
 ### Reproduction numbers over time in all regions
 
@@ -62,7 +62,7 @@ knitr::include_graphics(here::here(file.path(summary_path, "rt_plot.png")))
 ```
 
 <br>
-`r paste0("*Figure ",  fig_start + 3, ": Time-varying estimate of the effective reproduction number (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in all regions. Estimates from existing data are shown up to the ", latest_date,  ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""), ". Confidence in the estimated values is indicated by translucency with increased translucency corresponding to reduced confidence. The horizontal dotted line indicates the target value of 1 for the effective reproduction no. required for control. The vertical dashed line indicates the date of report generation.*")`
+`r paste0("*Figure ",  fig_start + 3, ": Time-varying estimate of the effective reproduction number (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in all regions. Estimates from existing data are shown up to the ", latest_date,  ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""), ". The horizontal dotted line indicates the target value of 1 for the effective reproduction no. required for control. The vertical dashed line indicates the date of report generation.*")`
 
 `r paste0("### Confirmed ",  case_def, "s and their estimated date of infection in all regions")`
 
@@ -71,7 +71,7 @@ knitr::include_graphics(here::here(file.path(summary_path, "rt_plot.png")))
 knitr::include_graphics(here::here(file.path(summary_path, "cases_plot.png")))
 ```
 
-`r paste0("*Figure ",  fig_start + 4, ": Confirmed ", case_def,  "s by date of report (bars) and their estimated date of infection (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in all regions. Estimates from existing data are shown up to the ", latest_date, ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""),". Confidence in the estimated values is indicated by translucency with increased translucency corresponding to reduced confidence. The vertical dashed line indicates the date of report generation.*")`
+`r paste0("*Figure ",  fig_start + 4, ": Confirmed ", case_def,  "s by date of report (bars) and their estimated date of infection (light ribbon = 90% credible interval; dark ribbon = the 50% credible interval) in all regions. Estimates from existing data are shown up to the ", latest_date, ifelse(report_forecast, " from when forecasts are shown. These should be considered indicative only", ""),". The vertical dashed line indicates the date of report generation.*")`
 
 `r paste0("### Latest estimates (as of the ", latest_date, ")")`
 
